# Bilboards

./: CMakeLists.txt  README.md
Data/: config.ini
Data/shaders/: billboard_fs.glsl  billboard_gs.glsl  billboard_vs.glsl
Projects/VS2015/: Bilbo.vcxproj  Bilbo.vcxproj.filters
Projects/VS2017/: Bilbo.sln  Bilbo.vcxproj
Scripts/: postbuild.bat
Src/: Billboard.cpp  Billboard.h  Camera.cpp  Camera.h  Engine.cpp  Engine.h  Main.cpp  Scene.cpp  Scene.h  Shaders.cpp  Shaders.h  Window.cpp  Window.h
